// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Liquid Basic 1`] = `
"<div>
  <input value=\\"{{name}}\\" />

  Hello! I can run in React, Vue, Solid, or Liquid!
</div>
"
`;

exports[`Liquid Button 1`] = `
"<div>
  {% if link %}

  <a href=\\"{{link}}\\">{{text}}</a>

  {% endif %}
</div>
"
`;

exports[`Liquid Form block 1`] = `
"<form validate=\\"{{validate}}\\" method=\\"{{method}}\\" name=\\"{{name}}\\"></form>
<style>
  .pre-1 {
    padding: 10px;
    color: red;
    text-align: center;
  }
</style>
"
`;

exports[`Liquid Img 1`] = `
"<img alt=\\"{{altText}}\\" src=\\"{{imgSrc}}\\" />
"
`;

exports[`Liquid Input block 1`] = `
"<input
  placeholder=\\"{{placeholder}}\\"
  type=\\"{{type}}\\"
  name=\\"{{name}}\\"
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
  required=\\"{{required}}\\"
/>
"
`;

exports[`Liquid Select block 1`] = `
"<select value=\\"{{value}}\\" defaultValue=\\"{{defaultValue}}\\" name=\\"{{name}}\\">
  {% for option in options %}
  <option value=\\"{{option.value}}\\"></option>
  {% endfor %}
</select>
"
`;

exports[`Liquid Submit button block 1`] = `
"<button type=\\"submit\\">{{text}}</button>
"
`;

exports[`Liquid Textarea 1`] = `
"<textarea
  placeholder=\\"{{placeholder}}\\"
  name=\\"{{name}}\\"
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
></textarea>
"
`;
